smithy-model/src/test/resources/software/amazon/smithy/model/loader/valid/inline-io/custom-suffix.smithy
$version: "2.0"
$operationInputSuffix: "Request"
$operationOutputSuffix: "Response"

namespace com.example

operation Operation {
    input := {}
    output := {}
}
