smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/inline-io/inline-error.smithy
// Expected: '[', but found '='
$version: "2.0"
namespace smithy.example

operation MyOperation {
    errors := [{}]
}
